fix: table heading overlap

--- a/src/components/Layout/styles.sass
+++ b/src/components/Layout/styles.sass
@@ -75,7 +75,7 @@ nav
     border-radius: 100px
     border-radius: 9px
     margin: 10px 0
-    padding: 12px 16px
+    padding: 10px 16px
 
     &.active .nav-arrow
       visibility: visible
